[gd_scene load_steps=9 format=1]

[ext_resource path="res://npc/collider.tres" type="Shape2D" id=1]
[ext_resource path="res://npc/collider_small.tres" type="Shape2D" id=2]
[ext_resource path="res://npc/human.gd" type="Script" id=3]
[ext_resource path="res://npc/sign.png" type="Texture" id=4]
[ext_resource path="res://npc/human_1.png" type="Texture" id=5]
[ext_resource path="res://npc/human_2.png" type="Texture" id=6]
[ext_resource path="res://npc/wobble.tres" type="Animation" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="human" type="Area2D"]

z/z = 5
input/pickable = true
shapes/0/shape = ExtResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.996773, -28.052 )
shapes/0/trigger = true
shapes/1/shape = ExtResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 3 )
speed = 0.6
flying_speed = 600.0
rot_speed = 4.7
planet_offset = 1.07

[node name="collider" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.996773, -28.052 )
shape = ExtResource( 1 )
trigger = true
_update_shape_index = 0

[node name="sprite_idle" type="Sprite" parent="."]

transform/scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )
offset = Vector2( -12.7592, -64.8324 )

[node name="collider_small" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = ExtResource( 2 )
trigger = false
_update_shape_index = 1

[node name="sprite_flying" type="AnimatedSprite" parent="."]

visibility/visible = false
transform/scale = Vector2( 0.35, 0.35 )
frames = SubResource( 1 )
animation = "default"
playing = true
offset = Vector2( -0.693338, -7.71658 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/wobble = ExtResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="area_enter" from="." to="." method="_on_human_area_enter"]


